--- a/classes/BookMyShow/Client/src/index.css
+++ b/classes/BookMyShow/Client/src/index.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -9,6 +14,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.d-flex {
+  display: flex;
 }
 .flex-1 {
   flex: 1;
